# ads_parser

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
ads/: admin.py  api_views.py  models.py  serializers.py  urls.py
ads/management/commands/: load_ad.py
ads/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: ad.json
locale/ru/LC_MESSAGES/: django.po
users/: api_views.py  models.py  serializers.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
