[tool.poetry]
name = "ad-parser"
version = "0.1.0"
description = ""
authors = ["safyro <vektorn1212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
drf-spectacular = "^0.27.2"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
